force-app/main/default/objects/Calculator_Result__c/Calculator_Result__c.object-meta.xml
<CustomObject>
    <label>Calculator Result</label>
    <nameField>
        <displayFormat>Calc Result-{000}</displayFormat>
        <label>Calculator#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calculator Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>