force-app/main/default/objects/Calculator_Result__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <length>6</length>
    <type>Text</type>
</CustomField>